2004-02-04 Alon Gazit <along@mainsoft.com>
	* EditCommandColumn.cs: fixed InitializeCell().
	The rendered LiteralControl should contain "&nbsp;" and not " ".

2004-02-01 Alon Gazit <along@mainsoft.com>

	* DataGrid.cs: fixed a problem in the paging mechanism in the method
	InitializePager().
	the problem was when (PagerStyle.Mode == PagerMode.NumericPages),
	while clicking the "..." link in the second page.

2004-01-28 Alon Gazit <along@mainsoft.com>

	* Calendar.cs: prevent NullReferenceException in RenderAllDays().

2004-01-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Calendar.cs: when rendering days, add a LiteralControl containing the
	day before OnDayRender is called. Only generate the default links for
	days when IsSelectable is true after OnDayRender. Fixes bug #53372.

2004-01-21  Martin Baulig  <martin@ximian.com>

	* XmlHierarchyData.cs: Make this compile with csc.

	* BulletedList.cs (BulletedList.SelectedItem): Removed the `set'
	accessor since the base class doesn't have one.

2004-01-18 Alon Gazit <along@mainsoft.com>

	* CheckBoxList.cs: fix problem with negative TabIndex (wasn't rendered).
	
2004-01-18 Alon Gazit <along@mainsoft.com>

	* Style.cs: CopyFrom method shouldn't copy a value that is equal to
	Property default value.
	* FontInfo.cs : CopyFrom method shouldn't copy a value that is equal to 
	Property default value.	

2004-01-15 Alon Gazit <along@mainsoft.com>

	* RadioButtonList.cs: RepeatLayout property should affect the rendered
	html.	

2004-01-15 Alon Gazit <along@mainsoft.com>
	* FontInfo.cs: Add validation check to Size property.	

2004-01-07 Alon Gazit <along@mainsoft.com>
	* DataGrid.cs: Fixed PrepareControlHierarchyForItem().
	merge the column's style to the cell's style and not to
	the item's(row) style.	

2004-01-04 Alon Gazit <along@mainsoft.com>
	* RangeValidator.cs: Fixed ControlPropertiesValid().
	
2004-01-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Xml.cs: mono-stylized and removed warnings.
